# stopmo-xcode

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  stopmo
.VSCodeCounter/2026-02-26_13-35-32/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.deriveddata/: info.plist
.deriveddata/ModuleCache.noindex/: Accessibility-42C4OU04G6I2BPGEG0PNA8QN0.pcm  ApplicationServices-2TQUWS3LW91DNP7NNC1HHUOEQ.pcm  CFNetwork-BF3O5RM4KKBBKZQYZQKXQGKIB.pcm  CUPS-6D6HE1J0F2JJSVJFR819LK6BU.pcm  (+54 more)
config/: sample.matrix.json  sample.yaml  sample2.matrix.json
docs/: architecture.md  cli.md  commenting-standards.md  gui-backend-api.md  gui-phase0-baseline.md  gui-phase1-design-system.md  gui-phase10-accessibility.md  gui-phase11-performance-resilience.md  gui-phase12-lifecycle-overhaul.md  gui-phase13-pipeline-surfaces.md  gui-phase2-shell-navigation.md  gui-phase3-errors-notifications.md  gui-phase4-setup-redesign.md  gui-phase5-project-ia.md  gui-phase6-live-monitor.md  gui-phase7-shots-queue.md  gui-phase8-tools-workflow.md  gui-phase9-logs-history.md  gui-product-spec.md  interpretation-contract.md  phase-status.md
qa/: README.md  phase10_parity_signoff.py
tests/: test_app_api.py  test_arri_logc3.py  test_cli_alias.py  test_color_pipeline.py  test_completion_tracker.py  test_config.py  test_dpx_writer.py  test_exif_metadata.py  test_formatting.py  test_gui_bridge.py  test_matrix_suggest.py  test_preview_writer.py  test_prores_batch.py  test_queue_db.py  test_shot_naming.py  test_worker_exposure.py
(+1038 files in other folders)
